--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@
 #
 # ----------------------------------------------------------------------------
 
+cmake_minimum_required(VERSION 3.5)
+
 SET(OPENCV_CPP_SAMPLES_REQUIRED_DEPS opencv_core opencv_imgproc opencv_flann
     opencv_imgcodecs opencv_videoio opencv_highgui opencv_ml opencv_video
     opencv_objdetect opencv_photo opencv_features2d opencv_calib3d
